--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -642,4 +642,10 @@
   <data name="FactToolTip" xml:space="preserve">
     <value>Factorial. Example: fact(4) or 4!</value>
   </data>
+  <data name="ProductToolTip" xml:space="preserve">
+    <value>Product. Example: product(body, from, to, increment, variable)</value>
+  </data>
+  <data name="SumToolTip" xml:space="preserve">
+    <value>Summation. Example: sum(body, from, to, increment, variable)</value>
+  </data>
 </root>
