--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -642,4 +642,10 @@
   <data name="FactToolTip" xml:space="preserve">
     <value>Факторіал. Приклад: fact(4) or 4!</value>
   </data>
+  <data name="ProductToolTip" xml:space="preserve">
+    <value>Добуток. Приклад: product(body, from, to, increment, variable)</value>
+  </data>
+  <data name="SumToolTip" xml:space="preserve">
+    <value>Сума. Приклад: sum(body, from, to, increment, variable)</value>
+  </data>
 </root>
