--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -648,4 +648,7 @@
   <data name="SumToolTip" xml:space="preserve">
     <value>Сумма. Пример: sum(body, from, to, increment, variable)</value>
   </data>
+  <data name="MatrixExpanderHeader" xml:space="preserve">
+    <value>Матрицы</value>
+  </data>
 </root>
