--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -651,4 +651,13 @@
   <data name="MatrixExpanderHeader" xml:space="preserve">
     <value>Матриці</value>
   </data>
+  <data name="DetToolTip" xml:space="preserve">
+    <value>Детермінант матриці. Приклад: det({{1, 3}, {9, 4}})</value>
+  </data>
+  <data name="TransposeToolTip" xml:space="preserve">
+    <value>Транспонувати матрицю. Приклад: transpose({{1, 3}, {9, 4}})</value>
+  </data>
+  <data name="InverseToolTip" xml:space="preserve">
+    <value>Зворотній матриця. Приклад: inverse({{1, 3}, {9, 4}})</value>
+  </data>
 </root>
