--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -663,4 +663,10 @@
   <data name="RoundToolTip" xml:space="preserve">
     <value>Функція округлення. Приклад: round(number, digits).</value>
   </data>
+  <data name="CeilToolTip" xml:space="preserve">
+    <value>Повертає найменше ціле число, яке більше або дорівнює заданому числу. Приклад: ceil(5.55555).</value>
+  </data>
+  <data name="FloorToolTip" xml:space="preserve">
+    <value>Повертає найбільше ціле число, яке менше або дорівнює вказаному числу. Приклад: floor(5.55555).</value>
+  </data>
 </root>
