--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -669,4 +669,7 @@
   <data name="FloorToolTip" xml:space="preserve">
     <value>Возвращает наибольшее целое число, которое меньше или равно указанному числу. Пример: floor(5.55555).</value>
   </data>
+  <data name="ProgExpanderHeader" xml:space="preserve">
+    <value>Программирование</value>
+  </data>
 </root>
