--- a/xFunc/Resources/Resource.ru.resx
+++ b/xFunc/Resources/Resource.ru.resx
@@ -681,4 +681,28 @@
   <data name="IfToolTip" xml:space="preserve">
     <value>Условие if. Пример: if(x &lt; 2, sin(x), cos(x)).</value>
   </data>
+  <data name="ConditionalAndToolTip" xml:space="preserve">
+    <value>Условный оператор И. Пример: x == 0 &amp;&amp; y != 0.</value>
+  </data>
+  <data name="EqualToolTip" xml:space="preserve">
+    <value>Оператор равенства. Пример: x == 10.</value>
+  </data>
+  <data name="NotEqualToolTip" xml:space="preserve">
+    <value>Оператор неравенства. Пример: x != 10.</value>
+  </data>
+  <data name="LessThanToolTip" xml:space="preserve">
+    <value>Оператор сравнения "меньше". Пример: x &lt; 10.</value>
+  </data>
+  <data name="GreaterThanToolTip" xml:space="preserve">
+    <value>Оператор сравнения "больше". Пример: x &gt; 10.</value>
+  </data>
+  <data name="LessOrEqualToolTip" xml:space="preserve">
+    <value>Оператор сравнения "меньше или равно". Пример: x &lt;= 10.</value>
+  </data>
+  <data name="GreaterOrEqualToolTip" xml:space="preserve">
+    <value>Оператор сравнения "больше или равно". Пример: x &gt;= 10.</value>
+  </data>
+  <data name="ConditionalOrToolTip" xml:space="preserve">
+    <value>Условный оператор ИЛИ. Пример: x == 0 || y != 0.</value>
+  </data>
 </root>
