--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -681,4 +681,28 @@
   <data name="IfToolTip" xml:space="preserve">
     <value>Умова if. Приклад: if(x &lt; 2, sin(x), cos(x)).</value>
   </data>
+  <data name="EqualToolTip" xml:space="preserve">
+    <value>Оператор рівності. Приклад: x == 10.</value>
+  </data>
+  <data name="NotEqualToolTip" xml:space="preserve">
+    <value>Оператор нерівності. Приклад: x != 10.</value>
+  </data>
+  <data name="LessThanToolTip" xml:space="preserve">
+    <value>Оператор порівняння "менше". Приклад: x &lt;10.</value>
+  </data>
+  <data name="GreaterThanToolTip" xml:space="preserve">
+    <value>Оператор порівняння "більше". Приклад: x&gt; 10.</value>
+  </data>
+  <data name="LessOrEqualToolTip" xml:space="preserve">
+    <value>Оператор порівняння "менше або дорівнює". Приклад: x &lt;= 10.</value>
+  </data>
+  <data name="GreaterOrEqualToolTip" xml:space="preserve">
+    <value>Оператор порівняння "більше або дорівнює". Приклад: x&gt; = 10.</value>
+  </data>
+  <data name="ConditionalAndToolTip" xml:space="preserve">
+    <value>Умовний оператор І. Приклад: x == 0 &amp;&amp; y != 0.</value>
+  </data>
+  <data name="ConditionalOrToolTip" xml:space="preserve">
+    <value>Умовний оператор АБО. Приклад: x == 0 || y != 0.</value>
+  </data>
 </root>
