--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -705,4 +705,16 @@
   <data name="ConditionalOrToolTip" xml:space="preserve">
     <value>The conditional-OR operator. Example: x == 0 || y != 0.</value>
   </data>
+  <data name="AddAssignToolTip" xml:space="preserve">
+    <value>The "+=" operator. Example: x += 2.</value>
+  </data>
+  <data name="SubAssignToolTip" xml:space="preserve">
+    <value>The "-=" operator. Example: x -= 2.</value>
+  </data>
+  <data name="MulAssignToolTip" xml:space="preserve">
+    <value>The "*=" operator. Example: x *= 2.</value>
+  </data>
+  <data name="DivAssignToolTip" xml:space="preserve">
+    <value>The "/=" operator. Example: x /= 2.</value>
+  </data>
 </root>
