--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -729,4 +729,25 @@
   <data name="ConverterScreenTipText" xml:space="preserve">
     <value>Перетворює дані з однієї одиниці вимірювання в іншу.</value>
   </data>
+  <data name="ConverterTitle" xml:space="preserve">
+    <value>Конвертер величин</value>
+  </data>
+  <data name="ConverterTypeText" xml:space="preserve">
+    <value>_Тип конвертора:</value>
+  </data>
+  <data name="ValueText" xml:space="preserve">
+    <value>_Значення:</value>
+  </data>
+  <data name="UnitsText" xml:space="preserve">
+    <value>_Одиниці:</value>
+  </data>
+  <data name="FromText" xml:space="preserve">
+    <value>З:</value>
+  </data>
+  <data name="ToText" xml:space="preserve">
+    <value>В:</value>
+  </data>
+  <data name="ConverterCalculateText" xml:space="preserve">
+    <value>Розрахувати</value>
+  </data>
 </root>
