--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -750,4 +750,7 @@
   <data name="ConverterCalculateText" xml:space="preserve">
     <value>Calculate</value>
   </data>
+  <data name="SettingsSaveUF" xml:space="preserve">
+    <value>Save user functions.</value>
+  </data>
 </root>
