--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -750,4 +750,7 @@
   <data name="ConverterCalculateText" xml:space="preserve">
     <value>Розрахувати</value>
   </data>
+  <data name="SettingsSaveUF" xml:space="preserve">
+    <value>Зберігати функції користувача.</value>
+  </data>
 </root>
