--- a/xFunc/Resources/Resource.uk.resx
+++ b/xFunc/Resources/Resource.uk.resx
@@ -274,7 +274,7 @@
     <value>Версія:</value>
   </data>
   <data name="BitwiseExpanderHeader" xml:space="preserve">
-    <value>Бітові</value>
+    <value>Бітові та логічні</value>
   </data>
   <data name="ClearButtonHeader" xml:space="preserve">
     <value>Очистити</value>
