--- a/xFunc.Maths/Resources/Resource.uk.resx
+++ b/xFunc.Maths/Resources/Resource.uk.resx
@@ -144,6 +144,9 @@
   <data name="LessParams" xml:space="preserve">
     <value>Кількість параметрів менша, ніж очікується.</value>
   </data>
+  <data name="MatrixArgException" xml:space="preserve">
+    <value>Неправильні розміри матриць.</value>
+  </data>
   <data name="MoreParams" xml:space="preserve">
     <value>Кількість параметрів більша, ніж очікується.</value>
   </data>
@@ -174,7 +177,7 @@
   <data name="VariableNotFoundExceptionError" xml:space="preserve">
     <value>Змінна '{0}' не знайдена.</value>
   </data>
-  <data name="MatrixArgException" xml:space="preserve">
-    <value>Неправильні розміри матриць.</value>
+  <data name="ParameterTypeMismatchExceptionError" xml:space="preserve">
+    <value>Невідповідний тип параметра. (Очікується: {0}; Фактично: {1})</value>
   </data>
 </root>
